--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -123,7 +123,7 @@
     \vspace*{-2\baselineskip}
     \printglossary[type=\acronymtype, title={}, toctitle={}]
 
-    \printbibliography[title={}, heading=bibintoc]
+    \printbibliography[title={Bibliografia}, heading=bibintoc]
 
     \cleardoublepage
     \phantomsection
