--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -105,7 +105,17 @@
 \newglossaryentry{droniarz}
 {
     name={Droniarz},
+    plural={droniarze},
     description={Potoczne określenie osoby, która jest jednocześnie pilotem oraz operatorem drona. Zwykle entuzjasta dronów.}
+}
+
+\newglossaryentry{PANSA}
+{
+    name={PANSA},
+    description={
+        Polish Air Navigation Services Agency, pol. Polska Agencja Żeglugi Powietrznej. Instytuacja ta zapewnia m.in. mapę
+        z zaznaczonymi strefami lotów. Każda strefa ma swoje właściwości prawne.
+    }
 }
 
 \newglossaryentry{pilot-fpv}
