--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -157,13 +157,16 @@
 }
 \newglossaryentry{droniarz-fpv}{alias=pilot-fpv}
 
-\newglossaryentry{pilot-foto}
-{
-    name={Pilot foto},
-    description={Pilot wykorzystujący drony fotograficzne/filmowe do rejestracji materiałów wizualnych (zdjęcia, wideo), zwykle z naciskiem na stabilizację i jakość obrazu.}
+
+\newglossaryentry{droniarz-foto-video}{
+    name={droniarz foto/video},
+    description={Pilot wykorzystujący drony fotograficzne/filmowe do rejestracji materiałów wizualnych (zdjęcia, wideo),
+    zwykle z naciskiem na stabilizację i jakość obrazu.}
+    user1={droniarzem foto/video}
 }
-\newglossaryentry{droniarz-foto}{alias=pilot-foto}
-\newglossaryentry{droniarz-fotograf}{alias=pilot-foto}
+\newglossaryentry{droniarz-foto}{alias=droniarz-foto-video}
+\newglossaryentry{droniarz-fotograf}{alias=droniarz-foto-video}
+\newglossaryentry{pilot-foto}{alias=droniarz-foto-video}
 
 \newglossaryentry{azure-blob-storage}
 {
