--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -19,6 +19,10 @@
 
 \usepackage{float}% ma pomoc z bugiem ze tabelki/zdjęcia przenoszą sie na koniec rozdziału
 
+% używam w "zewnętrzne-usługi"
+\newcounter{integrationcard}[chapter]
+\renewcommand{\theintegrationcard}{\thechapter.\arabic{integrationcard}}
+
 %JSON Coloring
 \lstdefinelanguage{json}{
     basicstyle=\footnotesize\ttfamily,
@@ -109,6 +113,9 @@
 \addbibresource{bibliography.bib}
 \makeglossaries
 
+% odmiana wpisów ze słowniczka:
+\newcommand{\glsdroniarzFotoVideoInstr}{\glsuseri{droniarz-foto-video}} % TODO: nie dziala
+
 \begin{document}
 
     \maketitle
@@ -134,6 +141,12 @@
     \setglossarysection{section}
     \vspace*{-2\baselineskip}
     \printglossary[type=\acronymtype, title={}, toctitle={}]
+
+    \cleardoublepage
+    \phantomsection
+    \addcontentsline{toc}{chapter}{Spis tabel}
+    \renewcommand{\listtablename}{Spis tabel}
+    \listoftables
 
     \printbibliography[title={}, heading=bibintoc]
 
