--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -114,7 +114,10 @@
 \makeglossaries
 
 % odmiana wpisów ze słowniczka:
-\newcommand{\glsdroniarzFotoVideoInstr}{\glsuseri{droniarz-foto-video}} % TODO: nie dziala
+\newcommand{\glsdroniarzFotoVideoInstr}{%
+    \glslink{droniarz-foto-video}{\glsentryuseri{droniarz-foto-video}}%
+}
+
 
 \begin{document}
 
