--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -158,12 +158,17 @@
 \newglossaryentry{droniarz-fpv}{alias=pilot-fpv}
 
 
-\newglossaryentry{droniarz-foto-video}{
-    name={droniarz foto/video},
+\newglossaryentry{droniarz-foto-video}{%
+    name={Droniarz foto/video},
     description={Pilot wykorzystujący drony fotograficzne/filmowe do rejestracji materiałów wizualnych (zdjęcia, wideo),
-    zwykle z naciskiem na stabilizację i jakość obrazu.}
-    user1={droniarzem foto/video}
+    zwykle z naciskiem na stabilizację i jakość obrazu.},
+    user1={droniarzem foto/video}%
 }
+\newglossaryentry{droniarz-foto}{alias={droniarz-foto-video}}
+\newglossaryentry{droniarz-fotograf}{alias={droniarz-foto-video}}
+\newglossaryentry{pilot-foto}{alias={droniarz-foto-video}}
+
+
 \newglossaryentry{droniarz-foto}{alias=droniarz-foto-video}
 \newglossaryentry{droniarz-fotograf}{alias=droniarz-foto-video}
 \newglossaryentry{pilot-foto}{alias=droniarz-foto-video}
