--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -145,7 +145,7 @@
 {
     name={PANSA},
     description={
-        Polish Air Navigation Services Agency, pol. Polska Agencja Żeglugi Powietrznej. Instytuacja ta zapewnia m.in. mapę
+        Polish Air Navigation Services Agency, pol. Polska Agencja Żeglugi Powietrznej. Instytucja ta zapewnia m.in. mapę
         z zaznaczonymi strefami lotów. Każda strefa ma swoje właściwości prawne.
     }
 }
@@ -167,11 +167,6 @@
 \newglossaryentry{droniarz-foto}{alias={droniarz-foto-video}}
 \newglossaryentry{droniarz-fotograf}{alias={droniarz-foto-video}}
 \newglossaryentry{pilot-foto}{alias={droniarz-foto-video}}
-
-
-\newglossaryentry{droniarz-foto}{alias=droniarz-foto-video}
-\newglossaryentry{droniarz-fotograf}{alias=droniarz-foto-video}
-\newglossaryentry{pilot-foto}{alias=droniarz-foto-video}
 
 \newglossaryentry{azure-blob-storage}
 {
