--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -99,26 +99,19 @@
     description={Powtarzalne, sprawdzone rozwiązanie typowego problemu projektowego lub architektonicznego. Wzorzec opisuje \emph{jak} coś organizować lub implementować, żeby było czytelne, skalowalne i łatwe w utrzymaniu}
 }
 
-\newglossaryentry{DAD_LLC}{
-    name={Disciplined Agile Delivery - Lean Life Cycle},
-    description={Kanbanowy tryb pracy bez sprintów: zespół pobiera małe zadania z tablicy, pilnuje limitów pracy w toku i często wdraża małe zmiany.
-    Planowanie jest lekkie i na bieżąco; priorytet mają rzeczy o najwyższej wartości.
-    Skupiamy się na płynności—skraca się czas przejścia zadań, usuwa blokady, usprawnia proces małymi krokami.
-    Jakość jest wbudowana: code review, testy automatyczne i prosta definicja „gotowe”}
-}
-
-\newglossaryentry{DAD_LLC}{
+\newglossaryentry{DAD_LLC}
+{
     name={Disciplined Agile Delivery - Lean Life Cycle},
     description={
         Disciplined Agile Delivery w wariancie Lean Life Cycle to sposób prowadzenia projektu,
         który łączy elastyczność Agile z przewidywalnością Waterfalla,
         ale bez stałych sprintów — praca toczy się w ciągłym przepływie.
         Na starcie zakłada mocniejszą fazę przygotowawczą: doprecyzowanie zakresu,
-        szkic architektury, identyfikację ryzyk i kryteria jakości. W realizacji następuje ciągłe doprecyzowywanie wymagań
-        i backlogu, oparte na regularnym feedbacku udziałowców, co pozwala korygować obrany kurs.
-        Całość opiera się na praktykach Lean — koncentracji na wartości, wizualizacji pracy
-        i małych partiach dostaw — oraz lekkim governance: peer review
-        i regularnych przeglądach postępów.
+        szkic architektury, identyfikację ryzyk i kryteria jakości.
+        W realizacji następuje ciągłe doprecyzowywanie wymagań
+        i backlogu, oparte na regularnym feedbacku udziałowców.
+        Całość opiera się na praktykach Lean oraz lekkim governance:
+        code review i regularnych przeglądach postępów.
     }
 }
 
@@ -145,31 +138,56 @@
 {
     name={PANSA},
     description={
-        Polish Air Navigation Services Agency, pol. Polska Agencja Żeglugi Powietrznej. Instytucja ta zapewnia m.in. mapę
-        z zaznaczonymi strefami lotów. Każda strefa ma swoje właściwości prawne.
+        Polish Air Navigation Services Agency, pol. Polska Agencja Żeglugi Powietrznej.
+        Instytucja ta zapewnia m.in. mapę z zaznaczonymi strefami lotów.
+        Każda strefa ma swoje właściwości prawne.
     }
 }
 
 \newglossaryentry{pilot-fpv}
 {
     name={Pilot FPV},
-    description={Pilot drona latający w trybie \textit{First Person View} (FPV), korzystający z gogli przekazujących obraz z kamery pokładowej, co pozwala sterować z perspektywy pierwszej osoby.}
+    description={Pilot drona latający w trybie \textit{First Person View} (FPV),
+    korzystający z gogli przekazujących obraz z kamery pokładowej.}
 }
-\newglossaryentry{droniarz-fpv}{alias=pilot-fpv}
 
+\newglossaryentry{droniarz-fpv}
+{
+    name={Droniarz FPV},
+    description={\glsentrydesc{pilot-fpv}}
+}
 
-\newglossaryentry{droniarz-foto-video}{%
+\newglossaryentry{droniarz-foto-video}
+{
     name={Droniarz foto/video},
-    description={Pilot wykorzystujący drony fotograficzne/filmowe do rejestracji materiałów wizualnych (zdjęcia, wideo),
-    zwykle z naciskiem na stabilizację i jakość obrazu.},
-    user1={droniarzem foto/video}%
+    description={Pilot wykorzystujący drony fotograficzne/filmowe do rejestracji materiałów wizualnych
+    (zdjęcia, wideo), zwykle z naciskiem na stabilizację i jakość obrazu.},
+    user1={droniarzem foto/video}
 }
-\newglossaryentry{droniarz-foto}{alias={droniarz-foto-video}}
-\newglossaryentry{droniarz-fotograf}{alias={droniarz-foto-video}}
-\newglossaryentry{pilot-foto}{alias={droniarz-foto-video}}
+
+\newglossaryentry{droniarz-foto}
+{
+    name={Droniarz foto},
+    description={\glsentrydesc{droniarz-foto-video}}
+}
+
+\newglossaryentry{droniarz-fotograf}
+{
+    name={Droniarz fotograf},
+    description={\glsentrydesc{droniarz-foto-video}}
+}
+
+\newglossaryentry{pilot-foto}
+{
+    name={Pilot foto},
+    description={\glsentrydesc{droniarz-foto-video}}
+}
 
 \newglossaryentry{azure-blob-storage}
 {
     name={Azure Blob Storage},
-    description={Usługa magazynu obiektowego w chmurze Microsoft Azure do przechowywania nieustrukturyzowanych danych (\textit{blobs}) takich jak obrazy, wideo i pliki. Udostępnia kontenery, warstwy dostępu, wersjonowanie oraz tokeny SAS; często używana do hostowania multimediów w aplikacjach webowych.}
+    description={Usługa magazynu obiektowego w chmurze Microsoft Azure do przechowywania
+    nieustrukturyzowanych danych (\textit{blobs}) takich jak obrazy, wideo i pliki.
+    Udostępnia kontenery, warstwy dostępu, wersjonowanie oraz tokeny SAS; często używana
+    do hostowania multimediów w aplikacjach webowych.}
 }
