dodanie opisów do glossary

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -106,3 +106,14 @@
     Skupiamy się na płynności—skraca się czas przejścia zadań, usuwa blokady, usprawnia proces małymi krokami.
     Jakość jest wbudowana: code review, testy automatyczne i prosta definicja „gotowe”}
 }
+
+\newglossaryentry{backlog}{
+    name={Backlog},
+    description={Lista zadań, które które należy wykonać w ramach projektu, używane w metodykach zwinnych.}
+}
+
+\newglossaryentry{tablica_kanban}{
+    name={Tablica Kanban},
+    description={Narzędzie do zarządzania przepływem pracy, które pomaga zespołom śledzić zadania oraz ich postępy.
+    Składa się z kolumn reprezentującyh stan etapu prac, na przykład „To do” lub „In progress”.}
+}
