--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -117,3 +117,9 @@
     description={Narzędzie do zarządzania przepływem pracy, które pomaga zespołom śledzić zadania oraz ich postępy.
     Składa się z kolumn reprezentującyh stan etapu prac, na przykład „To do” lub „In progress”.}
 }
+
+\newglossaryentry{ide}{
+    name={IDE},
+    description={ang. integrated development environment, to zintegrowane środowisko programistyczne, służące do
+    tworzenia, modyfikowania, testowania i konserwacji oprogramowania}
+}
