--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -119,7 +119,7 @@
 
 \newglossaryentry{hook}{
     name={Hook (React)},
-    description={Prosta funkcja w React, która „dodaje” możliwości do elementu interfejsu — np. pozwala mu coś zapamiętać (stan) albo zrobić coś po zmianie/załadowaniu. Wszystkie hooki zaczyna się od \texttt{use...} (np. \texttt{useState}, \texttt{useEffect}).}
+    description={Prosta funkcja w React, która „dodaje” możliwości do elementu interfejsu — np. pozwala mu coś zapamiętać (stan) albo zrobić coś po zmianie/załadowaniu. Wszystkie hooki zaczynają się od \texttt{use...} (np. \texttt{useState}, \texttt{useEffect}).}
 }
 
 \newglossaryentry{css}{
