--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -1,4 +1,4 @@
-% tu sie dodaje wpisy z ktorych potem mozna korzystac w tekscie (na razie nie wiemc zemu nie dziala)
+% tu sie dodaje wpisy z ktorych potem mozna korzystac w tekscie, ja obecnie używam tego DAD w rozdiale z metodologią
 
 @misc{wikipedia:loremipsum,
     title = {Lorem Ipsum},
@@ -42,6 +42,48 @@
     organization = {PMI}
 }
 
+
+@online{tailwind,
+  title   = {Tailwind},
+  url     = {https://tailwindcss.com/},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{tanstack-query,
+  title   = {Tanstack Query},
+  url     = {https://tanstack.com/query/latest},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{axios,
+  title   = {Axios},
+  url     = {https://axios-http.com/},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{motion,
+  title   = {Motion},
+  url     = {https://motion.dev/},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{redux,
+  title   = {Redux},
+  url     = {https://redux.js.org/},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
+
+@online{react-use-state,
+  title   = {React useState},
+  url     = {https://react.dev/reference/react/useState},
+  urldate = {2025-11-03},
+  date    = {2025-01-01},
+}
 @online{github-actions-billing,
     title = {About billing for GitHub Actions},
     organization = {GitHub Docs},
