wpisy do słownika

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -255,6 +255,11 @@
 
 \newglossaryentry{ide}{
     name={IDE},
-    description={ang. integrated development environment, to zintegrowane środowisko programistyczne, służące do
+    description={(ang. \textit{integrated development environment}); to zintegrowane środowisko programistyczne, służące do
     tworzenia, modyfikowania, testowania i konserwacji oprogramowania}
+}
+
+\newglossaryentry{api}{
+    name={API},
+    description={(ang. \textit{application programming interface}); zbiór reguł i operacji do komunikacji z oprogramowaniem.}
 }
