--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -263,3 +263,34 @@
     name={API},
     description={(ang. \textit{application programming interface}); zbiór reguł i operacji do komunikacji z oprogramowaniem.}
 }
+
+\newglossaryentry{rest_api}{
+    name={REST API},
+    description={Architektura budowania usług sieciowych komunikujących poprzez metody protokołu HTTP (GET, PUT, POST, DELETE, PATCH).
+    Wymiana danych występuje często w formacie JSON lub XML.
+    REST API musi spełniać następujące reguły:
+    \begin{enumerate}
+        \item \textbf{Rozdzielenie klient-serwer}
+
+        Klient i serwer są od siebie niezależne, komunikują się poprzez interfejs.
+        \item \textbf{Bezstanowość}
+
+        Każde żądanie przez klienta zawiera wszystkie informacje niezbędne do jego obsłużenia.
+        Po otrzymaniu żądania serwer nie przechowuje o nim żadnych informacji.
+        \item \textbf{Buforowalność (cache)}
+
+        Odpowiedzi z API powinny informować czy dane są możliwe do cachewania.
+        Jeśli tak, to przy kolejnym żądaniu powinny być zwrócone z cachea.
+        \item \textbf{Jednolity interfejs}
+
+        Serwer definiuje jednolity intefejs poprzez zasady:
+        \begin{itemize}
+            \item Identyfikacja zasobów - każdy zasób musi być jednoznacznie (unikatowo) zidentyfikowany w interakcji klient-serwer.
+            \item Manipulacja zasobów poprzez reprezentacje - po otrzymaniu reprezentacji zasobu, klient może zmienić stan zasobu poprzez przesłanie zmodyfikowanej reprezentacji.
+            \item Samoopisujące się wiadomości - każde żądanie i odpowiedź powinny zawierać informacje do jego poprawnego przetworzenia.
+            \item Hypermedia jako silnik stanu aplikacji (HATEOAS) - po otrzymaniu odpowiedzi z serwera, klient powinien móc dynamicznie poznać inne interakcje poprzez linki.
+        \end{itemize}
+        \item \textbf{Warstwowość}
+    \end{enumerate}
+    }
+}
