--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -6,6 +6,8 @@
 \usepackage{import}
 \usepackage{csquotes}
 \usepackage{float}% ma pomoc z bugiem ze tabelki/zdjęcia przenoszą sie na koniec rozdziału
+\usepackage{enumitem} % dla lepszej kontroli list
+\usepackage[utf8]{inputenc}
 
 %nowe pakiety do tabel:
 \usepackage{tabularx}
@@ -138,9 +140,11 @@
     \input{chapters/naklad-pracy/naklad-pracy}
     \input{chapters/podsumowanie/podsumowanie}
 
+
     \chapter{Słownik pojęć i skrótów}
     \label{ch:sownik-pojec-i-skrotow}
     \setglossarysection{section}
+    \setglossarystyle{altlist}
     \vspace*{-2\baselineskip}
     \printglossary[type=\acronymtype, title={}, toctitle={}]
 
