--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -264,12 +264,12 @@
     description={(ang. \textit{application programming interface}); zbiór reguł i operacji do komunikacji z oprogramowaniem.}
 }
 
-\newglossaryentry{rest_api}{
-    name={REST API},
+\longnewglossaryentry{rest_api}{
+    name={REST \gls{API}},
     description={Architektura budowania usług sieciowych komunikujących poprzez metody protokołu HTTP (GET, PUT, POST, DELETE, PATCH).
     Wymiana danych występuje często w formacie JSON lub XML.
-    REST API musi spełniać następujące reguły:
-    \begin{enumerate}
+    REST \gls{API} musi spełniać następujące reguły:
+    \begin{enumerate}[nosep]
         \item \textbf{Rozdzielenie klient-serwer}
 
         Klient i serwer są od siebie niezależne, komunikują się poprzez interfejs.
@@ -279,12 +279,12 @@
         Po otrzymaniu żądania serwer nie przechowuje o nim żadnych informacji.
         \item \textbf{Buforowalność (cache)}
 
-        Odpowiedzi z API powinny informować czy dane są możliwe do cachewania.
+        Odpowiedzi z \gls{API} powinny informować czy dane są możliwe do cachewania.
         Jeśli tak, to przy kolejnym żądaniu powinny być zwrócone z cachea.
         \item \textbf{Jednolity interfejs}
 
         Serwer definiuje jednolity intefejs poprzez zasady:
-        \begin{itemize}
+        \begin{itemize}[nosep]
             \item Identyfikacja zasobów - każdy zasób musi być jednoznacznie (unikatowo) zidentyfikowany w interakcji klient-serwer.
             \item Manipulacja zasobów poprzez reprezentacje - po otrzymaniu reprezentacji zasobu, klient może zmienić stan zasobu poprzez przesłanie zmodyfikowanej reprezentacji.
             \item Samoopisujące się wiadomości - każde żądanie i odpowiedź powinny zawierać informacje do jego poprawnego przetworzenia.
