--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -267,22 +267,24 @@
 \longnewglossaryentry{rest_api}{
     name={REST API}
 }{
-    Architektura budowania usług sieciowych komunikujących poprzez metody protokołu HTTP (GET, PUT, POST, DELETE, PATCH).%
-    Wymiana danych występuje często w formacie JSON lub XML.\\[0.5em]
-    REST API musi spełniać następujące reguły:
+    Architektura budowania usług sieciowych komunikujących się poprzez metody protokołu HTTP (GET, PUT, POST, DELETE, PATCH).
+    Wymiana danych występuje często w formacie JSON lub XML.
+    \\REST API musi spełniać następujące reguły:
     \begin{enumerate}[nosep]
-        \item \textbf{Rozdzielenie klient-serwer} — klient i serwer są od siebie niezależne, komunikują się poprzez interfejs.
-        \item \textbf{Bezstanowość} — każde żądanie przez klienta zawiera wszystkie informacje niezbędne do jego obsłużenia.
+        \item \textbf{Rozdzielenie klient-serwer} \textemdash \space klient i serwer są od siebie niezależne, komunikują się poprzez interfejs.
+        \item \textbf{Bezstanowość} \textemdash \space każde żądanie przez klienta zawiera wszystkie informacje niezbędne do jego obsłużenia.
         Po otrzymaniu żądania serwer nie przechowuje o nim żadnych informacji.
-        \item \textbf{Buforowalność (cache)} — odpowiedzi z API powinny informować, czy dane można cache’ować.
+        \item \textbf{Buforowalność (cache)} \textemdash \space odpowiedzi z API powinny informować, czy dane można cache’ować.
         Jeśli tak, to przy kolejnym żądaniu mogą być zwrócone z cache’a.
         \item \textbf{Jednolity interfejs}:
         \begin{itemize}[nosep]
-            \item Identyfikacja zasobów – każdy zasób musi być jednoznacznie zidentyfikowany w interakcji klient-serwer.
-            \item Manipulacja zasobów poprzez reprezentację – po otrzymaniu reprezentacji klient może zmienić stan zasobu przesyłając zmodyfikowaną reprezentację.
-            \item Samoopisujące się wiadomości – każde żądanie i odpowiedź powinny zawierać informacje do jego poprawnego przetworzenia.
-            \item Hypermedia jako silnik stanu aplikacji (HATEOAS) – po otrzymaniu odpowiedzi klient powinien móc dynamicznie poznać inne interakcje przez linki.
+            \item \textbf{Identyfikacja zasobów} \textemdash \space każdy zasób musi być jednoznacznie zidentyfikowany w interakcji klient-serwer.
+            \item \textbf{Manipulacja zasobów poprzez reprezentację} \textemdash \space po otrzymaniu reprezentacji klient może zmienić stan zasobu przesyłając zmodyfikowaną reprezentację.
+            \item \textbf{Samoopisujące się wiadomości} \textemdash \space każde żądanie i odpowiedź powinny zawierać informacje do jego poprawnego przetworzenia.
+            \item \textbf{Hypermedia jako silnik stanu aplikacji (HATEOAS)} \textemdash \space po otrzymaniu odpowiedzi klient powinien móc dynamicznie poznać inne interakcje przez linki.
         \end{itemize}
-        \item \textbf{Warstwowość}
+        \item \textbf{Warstwowość} \textemdash \space klient nie wie czy komunikuje się bezpośrednio z serwerem, czy poprzez pośrednika
+        (np. proxy) oraz nie wie z czym komunikuje się obsługująca go warstwa.
+        \item \textbf{Kod na żądanie (opcjonalnie)} \textemdash \space serwer może przesłać fragment kodu, który zostanie wykonany przez klienta.
     \end{enumerate}
 }
