--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -244,13 +244,13 @@
 
 \newglossaryentry{backlog}{
     name={Backlog},
-    description={Lista zadań, które które należy wykonać w ramach projektu, używane w metodykach zwinnych.}
+    description={Lista zadań, które należy wykonać w ramach projektu, używane w metodykach zwinnych.}
 }
 
 \newglossaryentry{tablica_kanban}{
     name={Tablica Kanban},
     description={Narzędzie do zarządzania przepływem pracy, które pomaga zespołom śledzić zadania oraz ich postępy.
-    Składa się z kolumn reprezentującyh stan etapu prac, na przykład „To do” lub „In progress”.}
+    Składa się z kolumn reprezentujących stan etapu prac, na przykład „To do” lub „In progress”.}
 }
 
 \newglossaryentry{ide}{
