--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -44,46 +44,47 @@
 
 
 @online{tailwind,
-  title   = {Tailwind},
-  url     = {https://tailwindcss.com/},
-  urldate = {2025-11-03},
-  date    = {2025-01-01},
+    title = {Tailwind},
+    url = {https://tailwindcss.com/},
+    urldate = {2025-11-03},
+    date = {2025-01-01},
 }
 
 @online{tanstack-query,
-  title   = {Tanstack Query},
-  url     = {https://tanstack.com/query/latest},
-  urldate = {2025-11-03},
-  date    = {2025-01-01},
+    title = {Tanstack Query},
+    url = {https://tanstack.com/query/latest},
+    urldate = {2025-11-03},
+    date = {2025-01-01},
 }
 
 @online{axios,
-  title   = {Axios},
-  url     = {https://axios-http.com/},
-  urldate = {2025-11-03},
-  date    = {2025-01-01},
+    title = {Axios},
+    url = {https://axios-http.com/},
+    urldate = {2025-11-03},
+    date = {2025-01-01},
 }
 
 @online{motion,
-  title   = {Motion},
-  url     = {https://motion.dev/},
-  urldate = {2025-11-03},
-  date    = {2025-01-01},
+    title = {Motion},
+    url = {https://motion.dev/},
+    urldate = {2025-11-03},
+    date = {2025-01-01},
 }
 
 @online{redux,
-  title   = {Redux},
-  url     = {https://redux.js.org/},
-  urldate = {2025-11-03},
-  date    = {2025-01-01},
+    title = {Redux},
+    url = {https://redux.js.org/},
+    urldate = {2025-11-03},
+    date = {2025-01-01},
 }
 
 @online{react-use-state,
-  title   = {React useState},
-  url     = {https://react.dev/reference/react/useState},
-  urldate = {2025-11-03},
-  date    = {2025-01-01},
+    title = {React useState},
+    url = {https://react.dev/reference/react/useState},
+    urldate = {2025-11-03},
+    date = {2025-01-01},
 }
+
 @online{github-actions-billing,
     title = {About billing for GitHub Actions},
     organization = {GitHub Docs},
@@ -164,3 +165,18 @@
     date = {2024-01-01}
 }
 
+@online{uml-def,
+    title = {Diagramy UML},
+    author = {Michał Wolski},
+    url = {https://wolski.pro/diagramy-uml/},
+    urldate = {2007-01-01},
+    date = {2025-11-18},
+}
+
+@online{bpmn-def,
+    title = {10 wskazówek poprawiających modelowanie procesów biznesowych w notacji BPMN},
+    author = {Michał Wolski},
+    url = {https://wolski.pro/2024/05/10-wskazowek-poprawiajacych-modelowanie-procesow-biznesowych-w-notacji-bpmn/},
+    urldate = {2007-01-01},
+    date = {2024-05-14},
+}
