--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -250,7 +250,7 @@
 \newglossaryentry{tablica_kanban}{
     name={Tablica Kanban},
     description={Narzędzie do zarządzania przepływem pracy, które pomaga zespołom śledzić zadania oraz ich postępy.
-    Składa się z kolumn reprezentujących stan etapu prac, na przykład „To do” lub „In progress”.}
+    Składa się z kolumn reprezentujących stan etapu prac, na przykład „Do zrobienia” lub „W trakcie”.}
 }
 
 \newglossaryentry{ide}{
@@ -287,4 +287,16 @@
         (np. proxy) oraz nie wie z czym komunikuje się obsługująca go warstwa.
         \item \textbf{Kod na żądanie (opcjonalnie)} \textemdash \space serwer może przesłać fragment kodu, który zostanie wykonany przez klienta.
     \end{enumerate}
+}
+
+\newglossaryentry{uml}{
+    name={UML},
+    description={(ang. \textit{Unified Modeling Language});
+    graficzny język wizualizacji, specyfikowania oraz dokumentowania składników systemów informatycznych. }
+}
+
+\newglossaryentry{bpmn}{
+    name={BPMN},
+    description={(ang. \textit{Business Process Model and Notation});
+    standardowa notacja graficzna, która umożliwia szczegółowe przedstawienie i dokumentowanie procesów biznesowych.}
 }
