--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -242,3 +242,7 @@
     description={Konstrukcja CSS pozwalająca stosować reguły stylów w zależności od cech urządzenia/okna (np. szerokości ekranu, orientacji, preferencji użytkownika). Podstawa responsywnego projektowania (\emph{responsive design}).}
 }
 
+\newglossaryentry{infinity-scroll}{
+    name={Infinity scroll},
+    description={Wzorzec interfejsu użytkownika, w którym kolejne porcje treści są automatycznie doładowywane podczas przewijania strony w dół, zamiast być podzielone na odrębne, ręcznie przełączane strony}
+}
