--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -170,8 +170,8 @@
     title = {Język UML 2.0 w modelowaniu systemów informatycznych},
     publisher = {Helion},
     isbn = {83-736-1892-9, 8373618929},
-    note = {dostęp 2025-11-19},
-    date = {2006-01-31},
+    year ={2006},
+    location = {Warszawa}
 }
 
 @online{bpmn-def,
