--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -128,11 +128,14 @@
     \vspace*{-2\baselineskip}
     \printglossary[type=\acronymtype, title={}, toctitle={}]
 
+    \begingroup
+    \hypersetup{linkcolor=black}
     \cleardoublepage
     \phantomsection
     \addcontentsline{toc}{chapter}{Spis tabel}
     \renewcommand{\listtablename}{Spis tabel}
     \listoftables
+    \endgroup
 
     \printbibliography[title={}, heading=bibintoc]
 
