--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -165,18 +165,19 @@
     date = {2024-01-01}
 }
 
-@online{uml-def,
-    title = {Diagramy UML},
-    author = {Michał Wolski},
-    url = {https://wolski.pro/diagramy-uml/},
-    urldate = {2007-01-01},
-    date = {2025-11-18},
+@book{uml-def,
+    author = {Stanisław Wrycza and Bartosz Marcinkowski and Krzysztof Wyrzykowski},
+    title = {Język UML 2.0 w modelowaniu systemów informatycznych},
+    publisher = {Helion},
+    isbn = {83-736-1892-9, 8373618929},
+    year ={2006},
+    location = {Warszawa}
 }
 
 @online{bpmn-def,
     title = {10 wskazówek poprawiających modelowanie procesów biznesowych w notacji BPMN},
     author = {Michał Wolski},
     url = {https://wolski.pro/2024/05/10-wskazowek-poprawiajacych-modelowanie-procesow-biznesowych-w-notacji-bpmn/},
-    urldate = {2007-01-01},
+    urldate = {2025-11-19},
     date = {2024-05-14},
 }
