--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -8,6 +8,7 @@
 \usepackage{float}% ma pomoc z bugiem ze tabelki/zdjęcia przenoszą sie na koniec rozdziału
 \usepackage{enumitem} % dla lepszej kontroli list
 \usepackage[utf8]{inputenc}
+\usepackage[table]{xcolor} % kolory w tabelach
 
 %nowe pakiety do tabel:
 \usepackage{tabularx}
