--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -300,7 +300,18 @@
     description={(ang. \textit{Business Process Model and Notation});
     standardowa notacja graficzna, która umożliwia szczegółowe przedstawienie i dokumentowanie procesów biznesowych.}
 }
+
 \newglossaryentry{infinite-scroll}{
     name={Infinite scroll},
     description={Wzorzec interfejsu użytkownika, w którym kolejne porcje treści są automatycznie doładowywane podczas przewijania strony w dół, zamiast być podzielone na odrębne, ręcznie przełączane strony}
+}
+
+\newglossaryentry{redis}{
+    name={Redis},
+    description={}
+}
+
+\newglossaryentry{cache}{
+    name={Cache},
+    description={}
 }
