--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -308,10 +308,11 @@
 
 \newglossaryentry{redis}{
     name={Redis},
-    description={}
+    description={Baza danych typu klucz–wartość wykorzystywana jako szybka warstwa \glslink{cache}{cache}}
 }
 
 \newglossaryentry{cache}{
     name={Cache},
-    description={}
+    description={Mechanizm przechowywania danych w celu przyspieszenia ich ponownego odczytu}
 }
+
