--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -21,6 +21,8 @@
 \newcolumntype{Y}{>{\hspace{0.6em}}X<{\hspace{0.6em}}}
 \newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}}
 
+\setlist[description]{leftmargin=0pt,labelindent=0pt}
+
 % używam w "zewnętrzne-usługi"
 \newcounter{integrationcard}[chapter]
 \renewcommand{\theintegrationcard}{\thechapter.\arabic{integrationcard}}
