--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -304,3 +304,10 @@
     name={Infinite scroll},
     description={Wzorzec interfejsu użytkownika, w którym kolejne porcje treści są automatycznie doładowywane podczas przewijania strony w dół, zamiast być podzielone na odrębne, ręcznie przełączane strony}
 }
+
+\newglossaryentry{moscow}{
+    name={MoSCoW},
+    description={Metoda nadawania priorytetów wymaganiom, wyróżniająca kategorie:
+    \emph{Must have}, \emph{Should have}, \emph{Could have} oraz
+    \emph{Won't have this time}}
+}
