--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -39,6 +39,12 @@
     description={Skrót od \textit{JSON Web Token}. Standard służący do bezpiecznego przekazywania informacji między stronami w formacie JSON, często używany w procesach autoryzacji użytkowników}
 }
 
+\newglossaryentry{oauth}
+{
+    name={OAuth},
+    description={Standard autoryzacji umożliwiający aplikacjom zewnętrznym uzyskanie dostępu do zasobów użytkownika bez przekazywania jego hasła, często wykorzystywany przy logowaniu za pomocą dostawców takich jak Google czy GitHub}
+}
+
 \newglossaryentry{cicd}
 {
     name={CI/CD},
@@ -300,6 +306,7 @@
     description={(ang. \textit{Business Process Model and Notation});
     standardowa notacja graficzna, która umożliwia szczegółowe przedstawienie i dokumentowanie procesów biznesowych.}
 }
+
 \newglossaryentry{infinite-scroll}{
     name={Infinite scroll},
     description={Wzorzec interfejsu użytkownika, w którym kolejne porcje treści są automatycznie doładowywane podczas przewijania strony w dół, zamiast być podzielone na odrębne, ręcznie przełączane strony}
