--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -51,6 +51,120 @@
     description={Skrót od \textit{Continuous Integration/Continuous Deployment}. Praktyka programistyczna polegająca na automatyzacji procesu budowania, testowania i wdrażania oprogramowania}
 }
 
+\newglossaryentry{github}
+{
+    name={GitHub},
+    description={Platforma hostingu repozytoriów \textit{Git} w chmurze, oferująca m.in. pull requesty, system zgłoszeń (issues), zarządzanie wersjami oraz integrację z narzędziami CI/CD}
+}
+
+\newglossaryentry{jira}
+{
+    name={Jira},
+    description={Narzędzie firmy Atlassian do zarządzania projektami i zadaniami, szeroko stosowane w metodykach zwinnych. Umożliwia pracę z epikami, taskami, podtaskami oraz tablicami Scrum i Kanban}
+}
+
+\newglossaryentry{spring-boot}
+{
+    name={Spring Boot},
+    description={Framework w ekosystemie Spring dla języka Java, ułatwiający tworzenie aplikacji backendowych dzięki automatycznej konfiguracji, wbudowanemu serwerowi aplikacyjnemu oraz zestawowi gotowych starterów}
+}
+
+\newglossaryentry{spring-security}
+{
+    name={Spring Security},
+    description={Moduł bezpieczeństwa w ekosystemie Spring odpowiedzialny za uwierzytelnianie i autoryzację użytkowników. Zapewnia obsługę różnych mechanizmów logowania, ról i uprawnień oraz integrację z różnymi źródłami danych}
+}
+
+\newglossaryentry{docker}
+{
+    name={Docker},
+    description={Platforma do konteneryzacji aplikacji. Pozwala uruchamiać oprogramowanie w lekkich, izolowanych kontenerach tworzonych na podstawie obrazów, co upraszcza wdrażanie i utrzymanie spójnego środowiska}
+}
+
+\newglossaryentry{cors}
+{
+    name={CORS},
+    description={Skrót od \textit{Cross-Origin Resource Sharing}. Mechanizm bezpieczeństwa w przeglądarkach, który kontroluje, czy aplikacja z jednej domeny może wykonywać zapytania HTTP do serwera w innej domenie; konfigurowany za pomocą nagłówków HTTP}
+}
+
+\newglossaryentry{http-only-cookie}
+{
+    name={Ciasteczko HttpOnly},
+    description={Ciasteczko HTTP ustawione z flagą \texttt{HttpOnly}, dzięki czemu nie jest dostępne z poziomu JavaScriptu. Zmniejsza ryzyko kradzieży tokenów (np. JWT) w przypadku ataków typu XSS}
+}
+
+\newglossaryentry{tailwind-css}
+{
+    name={Tailwind CSS},
+    description={Framework CSS typu \textit{utility-first}, dostarczający gotowe klasy narzędziowe do określania wyglądu (kolory, odstępy, layout). Umożliwia szybkie prototypowanie i spójne stylowanie komponentów bez pisania rozbudowanych arkuszy CSS}
+}
+
+\newglossaryentry{prettier}
+{
+    name={Prettier},
+    description={Narzędzie do automatycznego formatowania kodu (np. JavaScript, TypeScript, CSS, HTML). Narzuca spójny styl formatowania, zastępując ręczne ustawianie wcięć i łamań linii}
+}
+
+\newglossaryentry{eslint}
+{
+    name={ESLint},
+    description={Statyczny analizator kodu JavaScript/TypeScript. Umożliwia wykrywanie błędów, niespójności stylu oraz potencjalnych problemów poprzez zestaw reguł, które można dostosować do projektu}
+}
+
+\newglossaryentry{tanstack-query}
+{
+    name={TanStack Query},
+    description={Biblioteka do obsługi zapytań do serwera i cachowania danych w aplikacjach frontendowych (m.in. React). Ułatwia zarządzanie stanem danych z backendu: pobieranie, odświeżanie, invalidację i obsługę błędów}
+}
+
+\newglossaryentry{leaflet}
+{
+    name={Leaflet},
+    description={Lekka biblioteka JavaScript do tworzenia interaktywnych map w przeglądarce, często używana z danymi z OpenStreetMap. Umożliwia dodawanie znaczników, warstw oraz obsługę interakcji użytkownika}
+}
+
+\newglossaryentry{e2e-tests}
+{
+    name={Testy E2E},
+    description={Testy \textit{end-to-end}, które sprawdzają działanie systemu od strony użytkownika, przechodząc przez wszystkie warstwy aplikacji (frontend, backend, baza danych) i symulując rzeczywiste scenariusze użycia}
+}
+
+\newglossaryentry{dto}
+{
+    name={DTO},
+    description={Skrót od \textit{Data Transfer Object}. Prosty obiekt przenoszący dane między warstwami systemu lub między usługami. Zawiera pola danych, zazwyczaj bez logiki biznesowej}
+}
+
+\newglossaryentry{modal}
+{
+    name={Modal},
+    description={Okno dialogowe (okno modalne), które pojawia się na wierzchu interfejsu i blokuje interakcję z resztą aplikacji, dopóki użytkownik go nie zamknie. Służy do prezentowania ważnych komunikatów lub formularzy}
+}
+
+\newglossaryentry{skeleton-loader}
+{
+    name={Skeleton loader},
+    description={Wzorzec prezentowania stanu ładowania, w którym zamiast klasycznego „spinnera” wyświetlane są szare prostokąty imitujące docelowy układ treści. Poprawia subiektywne odczucie szybkości działania aplikacji}
+}
+
+\newglossaryentry{z-index}
+{
+    name={z-index},
+    description={Właściwość CSS określająca kolejność nakładania się elementów (oś Z). Wyższa wartość powoduje wyświetlenie elementu „nad” elementami o niższych wartościach}
+}
+
+\newglossaryentry{intersection-observer}
+{
+    name={Intersection Observer},
+    description={API przeglądarkowe umożliwiające reagowanie na momenty, gdy dany element pojawia się w polu widzenia użytkownika (viewport) lub opuszcza je. Wykorzystywane m.in. do implementacji \gls{infinite-scroll} i lazy loadingu}
+}
+
+\newglossaryentry{latex}
+{
+    name={LaTeX},
+    description={System składu tekstu wykorzystywany do przygotowywania profesjonalnych dokumentów technicznych i naukowych. Umożliwia precyzyjne formatowanie, zarządzanie odwołaniami, bibliografią i wzorami matematycznymi}
+}
+
 \newglossaryentry{commit}
 {
     name={Commit},
