--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -9,6 +9,7 @@
 \usepackage{minted}
 \usepackage{enumitem} % dla lepszej kontroli list
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 %nowe pakiety do tabel:
 \usepackage{booktabs}
