--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -425,3 +425,37 @@
     name={Infinite scroll},
     description={Wzorzec interfejsu użytkownika, w którym kolejne porcje treści są automatycznie doładowywane podczas przewijania strony w dół, zamiast być podzielone na odrębne, ręcznie przełączane strony}
 }
+\newglossaryentry{cdn}
+{
+    name={CDN},
+    description={Skrót od \textit{Content Delivery Network}. Rozproszona sieć serwerów
+    służąca do szybkiego dostarczania statycznych zasobów (np. obrazów, arkuszy CSS,
+    skryptów JavaScript) z węzłów geograficznie najbliższych użytkownikowi, co zmniejsza
+    opóźnienia i odciąża serwer aplikacji}
+}
+
+\newglossaryentry{maplibre}
+{
+    name={MapLibre},
+    description={Otwartoźródłowa biblioteka do renderowania interaktywnych map
+    wektorowych w przeglądarce, rozwijana jako niezależna kontynuacja Mapbox GL JS.
+    Umożliwia wyświetlanie kafelków mapowych, znaczników i warstw z danymi
+    geoprzestrzennymi}
+}
+
+\newglossaryentry{websocket}
+{
+    name={WebSocket},
+    description={Protokół komunikacyjny umożliwiający dwukierunkową komunikację
+    w czasie rzeczywistym między przeglądarką a serwerem po pojedynczym,
+    utrzymywanym połączeniu TCP. Często wykorzystywany m.in. w czatach i aplikacjach
+    działających „na żywo”}
+}
+
+\newglossaryentry{react-query}
+{
+    name={React Query},
+    description={Dawna nazwa biblioteki TanStack Query. Biblioteka dla Reacta
+    wspierająca pobieranie, cachowanie i synchronizację danych z API oraz obsługę
+    stanów ładowania i błędów w komponentach}
+}
