--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -459,3 +459,41 @@
     wspierająca pobieranie, cachowanie i synchronizację danych z API oraz obsługę
     stanów ładowania i błędów w komponentach}
 }
+
+\newglossaryentry{docker-compose}
+{
+    name={Docker Compose},
+    description={Narzędzie do definiowania i uruchamiania wielokontenerowych aplikacji \gls{docker}
+    za pomocą pliku konfiguracyjnego (np. \texttt{docker-compose.yml}). Umożliwia jednoczesne
+    uruchamianie powiązanych usług (np. \gls{backend}, baza danych, usługi pomocnicze) jednym poleceniem}
+}
+
+\newglossaryentry{pro}
+{
+    name={PRO},
+    description={Przedmiot realizowany na 5. semestrze studiów, prowadzony przez dr. inż. Martę Łabudę. W ramach przedmiotu
+    wybrano temat projektu oraz
+    wytworzono wstępną dokumentację projektu w tym m.in. wymagania.}
+}
+
+\newglossaryentry{prz1}
+{
+    name={PRZ 1},
+    description={Przedmiot realizowany na 6. semestrze studiów, prowadzony w przypadku zespołu projektowego przez mgr. inż. Adama Urbanowicza. W ramach przedmiotu
+    wytworzono projekt interfejsu użytkownika.}
+}
+
+\newglossaryentry{prz2}
+{
+    name={PRZ 1},
+    description={Przedmiot realizowany na 7. semestrze studiów, prowadzony w przypadku zespołu projektowego przez mgr. inż. Adama Urbanowicza. W ramach przedmiotu
+    dokońćzono prace nad pracą inżynierską. Pan Adam Ubranowicz jako promotor doradzał zespołowi projektowemu.}
+}
+
+\newglossaryentry{psem}
+{
+    name={PSEM},
+    description={Przedmiot realizowany na 7. semestrze studiów, prowadzony w przypadku zespołu projektowego przez dr. inż. Marka Bednarczyka. W ramach przedmiotu
+    dokończono wytwarzaniae dokumentacji.}
+}
+
