--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -305,3 +305,14 @@
     name={Infinite scroll},
     description={Wzorzec interfejsu użytkownika, w którym kolejne porcje treści są automatycznie doładowywane podczas przewijania strony w dół, zamiast być podzielone na odrębne, ręcznie przełączane strony}
 }
+
+\newglossaryentry{redis}{
+    name={Redis},
+    description={Baza danych typu klucz–wartość wykorzystywana jako szybka warstwa \glslink{cache}{cache}}
+}
+
+\newglossaryentry{cache}{
+    name={Cache},
+    description={Mechanizm przechowywania danych w celu przyspieszenia ich ponownego odczytu}
+}
+
