--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -305,3 +305,8 @@
     name={Infinite scroll},
     description={Wzorzec interfejsu użytkownika, w którym kolejne porcje treści są automatycznie doładowywane podczas przewijania strony w dół, zamiast być podzielone na odrębne, ręcznie przełączane strony}
 }
+
+\newglossaryentry{query-params}{
+    name={Parametry zapytania (query params)},
+    description={Pary \texttt{klucz=wartość} przekazywane w części adresu URL po znaku zapytania \texttt{?}, służące m.in. do filtrowania, sortowania, paginacji wyników lub przekazywania dodatkowych opcji żądania do serwera}
+}
